[gd_scene load_steps=9 format=3 uid="uid://byhx7dvseayyf"]

[ext_resource type="Script" uid="uid://5yae7ofd15hu" path="res://menus/script/sacar_dinero.gd" id="1_cxr46"]
[ext_resource type="Texture2D" uid="uid://cmcscw1xnpvt1" path="res://assets/images/fondoBanco.png" id="2_cxr46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxr46"]
bg_color = Color(0.435294, 0.211765, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.941176, 0.756863, 0.243137, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bupt8"]
bg_color = Color(0.435294, 0.211765, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.941176, 0.756863, 0.243137, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjpb2"]
bg_color = Color(0.435294, 0.211765, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.941176, 0.756863, 0.243137, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3qxo"]
bg_color = Color(0.47451, 0.266667, 0.0705882, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.960784, 0.678431, 0.235294, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxrmr"]
bg_color = Color(0.47451, 0.266667, 0.0705882, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.964706, 0.733333, 0.207843, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7dcr"]
bg_color = Color(0.47451, 0.266667, 0.0705882, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.964706, 0.733333, 0.207843, 1)
border_blend = true

[node name="SacarDinero" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxr46")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cxr46")
expand_mode = 1

[node name="Estado" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 288.0
offset_right = 768.0
offset_bottom = 321.0
theme_override_colors/font_color = Color(0.964706, 0.733333, 0.207843, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cxr46")
horizontal_alignment = 1

[node name="DineroB" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 24.0
offset_right = 368.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0.964706, 0.733333, 0.207843, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_bupt8")
horizontal_alignment = 1

[node name="DineroF" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 184.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0.964706, 0.733333, 0.207843, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_gjpb2")
horizontal_alignment = 1

[node name="Cantidad" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 352.0
offset_right = 767.0
offset_bottom = 407.0
theme_override_font_sizes/font_size = 20
placeholder_text = "Cuanto dinero quieres sacar o ingresar"
alignment = 1

[node name="sacarDinero" type="Button" parent="."]
layout_mode = 2
offset_left = 344.0
offset_top = 448.0
offset_right = 512.0
offset_bottom = 489.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_e3qxo")
text = "Sacar dinero"

[node name="ingresar" type="Button" parent="."]
layout_mode = 2
offset_left = 640.0
offset_top = 448.0
offset_right = 808.0
offset_bottom = 488.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uxrmr")
text = "Guardar dinero"

[node name="Atras" type="Button" parent="."]
layout_mode = 2
offset_left = 1008.0
offset_top = 24.0
offset_right = 1126.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_i7dcr")
text = "SALIR"

[connection signal="pressed" from="sacarDinero" to="." method="_on_sacar_dinero_pressed"]
[connection signal="pressed" from="ingresar" to="." method="_on_ingresar_pressed"]
[connection signal="pressed" from="Atras" to="." method="_on_atras_pressed"]
